# beavis_agent

./: .gitignore  README.md  requirements.txt
beavis-ui-preview/: index.html  package-lock.json  package.json
beavis-ui-preview/src/: App.tsx  index.css
configs/: normalizer.json
cpp_runtime/: CMakeLists.txt
cpp_runtime/src/: main.cpp
cpp_runtime/src/core/: RuntimeContext.h  SkillResult.h  ToolCall.h
cpp_runtime/src/executor/: ArgsValidator.cpp  ArgsValidator.h  Executor.cpp  Executor.h  SkillRegistry.cpp  SkillRegistry.h
cpp_runtime/src/resolvers/: AppResolver.cpp  AppResolver.h
cpp_runtime/src/skills/: ISkill.h
cpp_runtime/src/skills/apps/: OpenAppSkill.cpp  OpenAppSkill.h
cpp_runtime/src/skills/system/: VolumeSetSkill.cpp  VolumeSetSkill.h
cpp_runtime/src/skills/web/: WebOpenSkill.cpp  WebOpenSkill.h  WebSearchSkill.cpp  WebSearchSkill.h
cpp_runtime/src/skills/windows/: WindowControlSkill.cpp  WindowControlSkill.h  WindowLayoutSkill.cpp  WindowLayoutSkill.h
cpp_runtime/src/utils/: WindowUtils.cpp  WindowUtils.h
desktop_ui/: index.html  package-lock.json  package.json
desktop_ui/src/: App.tsx  index.css
desktop_ui/src-tauri/: Cargo.toml  tauri.conf.json
desktop_ui/src-tauri/capabilities/: default.json
desktop_ui/src-tauri/src/: bridge.rs  lib.rs  main.rs
desktop_ui_bridge/: TAURI_COMMAND_CONTRACT.md  beavisClient.ts
docs/: ARCHITECTURE.md  COMMAND_PROTOCOL.md  MODEL_STORAGE.md  PROJECT_CONTEXT.md  README.md  REFACTOR_PLAN.md  SETUP_AND_RUN.md  SKILL_DEVELOPMENT.md  app_index.md  command_protocol.md  skill_classifier.md  ui.md  user_apps.md  window_control.md
python_agent/: __init__.py  cpp_client.py  main.py
python_agent/api/: __init__.py  apps.py  commands.py  facade.py  history.py  result.py  settings.py  sites.py  voice.py
python_agent/bridge/: __init__.py  oneshot.py  router.py  stdio_server.py
python_agent/core/: __init__.py  command_executor.py  command_pipeline.py  decision.py  logger.py  pipeline.py  schemas.py
python_agent/ml_models/: __init__.py  open_app_arg_model.py  skill_classifier_model.py  volume_set_arg_model.py  web_open_arg_model.py  web_search_query_extractor.py  web_search_query_model.py  window_control_arg_model.py  window_layout_arg_model.py
python_agent/nlu/: __init__.py  (+2 more)
scripts/: dev.ps1  dev_desktop_ui.ps1
(+153 files in other folders)
