[package]
name = "beavis_desktop_ui"
version = "0.1.0"
description = "Beavis Agent desktop UI"
authors = ["gerychhh"]
edition = "2021"

[lib]
name = "beavis_desktop_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
