[package]
name = "beavis_desktop_ui"
version = "0.1.0"
description = "Beavis Agent desktop UI"
authors = ["gerychhh"]
edition = "2021"

[lib]
name = "beavis_desktop_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2"
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }
